--- a/module-3/01_Intro_HTML_CSS/exercise/Website/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/Website/index.html
@@ -13,10 +13,10 @@
         <div id="img-caption">
 
         <h2 id ="facts-section" class="injected-text">Release Dates</h2>
-        <table>
+        <table style = "width">
             <thead>
                 <tr>
-                    <th >Seasons</th>
+                    <th>Seasons</th>
                     <th> Release Date</th>
                 </tr>
                    </thead>		
@@ -40,6 +40,16 @@
                 </tr>
             </tbody>
         </table>
+<h3 id ="quotes-section"> Quotes</h3>
+<p>"No One Knows What The Outcome Will Be. So, Choose Whatever You'll Regret The Least." -Levi Ackerman</p>
+<p>"It Doesn't Matter How Strong The Opposition Is. It Doesn't Matter How Fearsome The World Is, It Doesn't Matter How Cruel The World Is. Fight!"-Eren Yeager</p>
+
+<h4 id ="links-section">Links</h4>
+<ul>
+    <li><a href="https://www.facebook.com/AttackOnTitan/">Facebook</a></li>
+    <li><a href="https://mobile.twitter.com/attackontitanen">Twitter</a></li>
+  </ul>
+
 <header>
 
 </header>
